Fix datagrid style issue
In Firefox, the separator between Details and Zoom to would show up after Zoom to button also adding a scrollbar to the datagrid

--- a/src/css/side-panel/datagrid.less
+++ b/src/css/side-panel/datagrid.less
@@ -516,9 +516,10 @@
 
                         .separator {
                             border-right: 1px solid black;
-                            height: 70%;
-                            position: absolute;
-                            top: 15%;
+                            float: left;
+                            width: 1px;
+                            height: 13px;
+                            margin: 6px 0 1px 0;
                         }
                     }
                 }
